2.0.7:
Sam Lantinga - Wed Nov 19 00:23:44 PST 2003
 * Updated libtool support for new mingw32 DLL build process
Sam Lantinga - Sun Sep  7 20:58:38 PDT 2003
 * Fixed glyph metrics for bold style fonts
Bursig Rafal - Wed Aug  6 15:02:59 PDT 2003
 * Fixed compilation with newer versions of FreeType
Kyle Davenport - Sat, 19 Apr 2003 17:13:31 -0500
 * Added .la files to the development RPM, fixing RPM build on RedHat 8
Bryan Kadzban - Mon, 24 Mar 2003 21:31:48 -0500
 * Fixed crash when opening a font file that doesn't exist

2.0.6:
Sam Lantinga - Mon Feb 10 05:44:26 PST 2003
 * Fixed UNICODE endian issues, added TTF_ByteSwappedUNICODE()
Jason Dorje Short - Thu, 30 Jan 2003 18:47:01 -0500
 * Added iconv() support to showfont to test UNICODE endian issues
Sam Lantinga - Sun Dec  1 18:34:40 PST 2002
 * Fixed memory corruption problem with small point sizes
Wesley Leong - Mon, 18 Nov 2002 11:30:15 -0800
 * Added initial .fon support to SDL_ttf
 * Fixed wrapping bug with negative horizontal bearing
 * Fixed TTF_RenderGlyph_Solid() to use the bitmap instead of pixmap
Sam Lantinga - Sun Oct 20 20:57:09 PDT 2002
 * Added shared library support for MacOS X
Pete Shinners - Tue Sep  3 10:17:45 PDT 2002
 * Added TTF_WasInit() to see if the library has been initialized
Sam Lantinga - Sat Aug 24 22:08:26 PDT 2002
 * Added a version number so runtime version checking is possible
Sam Lantinga - Sat Aug 24 22:06:22 PDT 2002
 * Added the ability to load a font from an SDL_RWops stream

2.0.5:
Sam Lantinga - Sat Apr 13 07:49:47 PDT 2002
 * Updated autogen.sh for new versions of automake
 * Specify the SDL API calling convention (C by default)
Jered Wierzbicki Fri Jan 18 13:45:10 PST 2002
 * Fixed a potential malloc of zero bytes in the font code.

2.0.4:
Sam Lantinga - Wed Nov 21 23:08:01 PST 2001
 * Added 'glfont', a program to demonstrate using SDL_ttf with OpenGL
akira yamada - Thu Nov  1 08:17:26 PST 2001
 * Added support for selecting individual font faces