@@ -1,4 +1,6 @@
 2.0.7:
+Philippe Plantier - Sat, 30 Oct 2004 22:46:47 +0200
+ * Fixed memory corruption problems with some italic fonts
 Sam Lantinga - Wed Nov 19 00:23:44 PST 2003
  * Updated libtool support for new mingw32 DLL build process
 Sam Lantinga - Sun Sep  7 20:58:38 PDT 2003
